manifest/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditor-web-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: auditor-web-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditor-web-svc
  labels:
    app: auditor-web-svc
spec:
  selector:
    matchLabels:
      app: auditor-web-svc

  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%

  template:
    metadata:
      labels:
        app: auditor-web-svc
    spec:
      containers:
        - name: auditor-web-svc
          image: ${DOCKERHUB_USERNAME}/${DOCKERHUB_REPOSITORY}:${IMAGE_LABEL}
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: regcred
