manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auditor-web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - auditor.z9fr.xyz
      secretName: letsencrypt-secret
  rules:
    - host: auditor.z9fr.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: auditor-web-svc
                port:
                  number: 3000
